# ml-poc

./: $null  .env.example  .gitignore  DEPLOYMENT_QUICK_START.md  DOCUMENTATION_INDEX.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_QUICKSTART.md  monitoring.db  pyproject.toml  requirements.txt  test_results.txt
.github/: copilot-instructions.md
.streamlit/: config.toml
config/: README.md  azure_config.json  environment.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  QUICK-START.md  README.md
docs/archived/: 00-read-me-first.md  01-start-here.md  02-quick-answers.md  03-query-comparison.md  04-performance-faq.md  05-performance-guide.md  06-visual-guide.md  07-mock-data-guide.md  08-mlflow-integration.md  09-complete-workflow.md  12-deliverables.md  13-model-selection.md  14-model-comparison-tool.md  15-checklist-phase-6.md  16-model-comparison-commands.md  17-complete-setup-summary.md  18-master-index.md  19-mlflow-quickstart.md  20-phase-6-summary.md  21-project-navigator.md  22-start-here.md  23-workflow-guide.md  25-mlflow-model-serving-guide.md  26-fastapi-mlflow-quickstart.md  27-fastapi-completion-summary.md  77-technical-architecture.md  88-implementation-plan.md  99-master-reference.md  COMPLETE_ORGANIZATION_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  MOCK_DATA_READY.txt  PROJECT_STRUCTURE.md  PYTHON_FILES_ORGANIZATION.md
docs/assessment/: ASSESSMENT_Details.md  ASSESSMENT_QUICK.md  POC_ASSESSMENT_RUBRIC.md  REQUIREMENTS.md
test_data/: archive-data.csv  training_data.csv
tests/: __init__.py  test_phase3_integration.py
(+109 files in other folders)
