[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-forecast-poc"
version = "0.1.0"
description = "POC: Forecast archived data volume and storage savings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0",
    "mlflow>=2.10.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "azure-functions>=1.18.0",
    "azure-ai-ml>=1.15.0",
    "azure-identity>=1.14.0",
    "azure-storage-blob>=12.17.0",
    "marshmallow>=3.19.0",
    "requests>=2.31.0",
    "pytz>=2024.1",
    "applicationinsights>=0.11.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
